--- a/PacMan/PacMan/PacMan.csproj
+++ b/PacMan/PacMan/PacMan.csproj
@@ -91,8 +91,11 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Commands\RelayCommand.cs" />
+    <Compile Include="Converters\TitleIndexConverter.cs" />
+    <Compile Include="Converters\ScoreIndexConverter.cs" />
     <Compile Include="Helpers\StringHelper.cs" />
     <Compile Include="Models\GameModel.cs" />
+    <Compile Include="ValidationRules\NameValidationRule.cs" />
     <Compile Include="ViewModels\GameViewModel.cs" />
     <Compile Include="ViewModels\PlayerViewModel.cs" />
     <Compile Include="Views\GameControl.xaml.cs">
