--- a/PacMan/DataLayer/DataLayer.csproj
+++ b/PacMan/DataLayer/DataLayer.csproj
@@ -60,8 +60,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Abstractions\IRepository.cs" />
     <Compile Include="DbContexts\GameDbContext.cs" />
+    <Compile Include="Repositories\IRepository.cs" />
     <Compile Include="UnitOfWork.cs" />
     <Compile Include="Entities\Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
